--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.10.4",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^9.4.0",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
@@ -11,14 +13,14 @@
         "@types/node": "^16.18.97",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "cors": "^2.8.5",
+        "@typescript-eslint/parser": "^5.62.0",
+        "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-react": "^7.34.2",
         "express": "^4.19.2",
         "express-graphql": "^0.12.0",
         "globals": "^15.3.0",
         "graphql": "^15.8.0",
         "graphql-tools": "^9.0.1",
-        "mongoose": "^8.4.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-scripts": "5.0.1",
@@ -55,16 +57,14 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@eslint/compat": "^1.0.3",
         "@graphql-codegen/cli": "5.0.2",
-        "@graphql-codegen/client-preset": "4.2.6",
         "@types/express": "^4.17.21",
         "@types/graphql": "^14.5.0",
         "@types/node": "^20.13.0",
         "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react-hooks": "^4.6.2",
         "install": "^0.13.0",
         "nodemon": "^3.1.2",
