--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "@apollo/client": "^3.10.4",
         "@eslint/eslintrc": "^3.1.0",
         "@eslint/js": "^9.4.0",
+        "@mantine/core": "^7.10.1",
+        "@mantine/hooks": "^7.10.1",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
@@ -14,6 +16,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/parser": "^5.62.0",
+        "cors": "^2.8.5",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-react": "^7.34.2",
         "express": "^4.19.2",
@@ -23,6 +26,8 @@
         "graphql-tools": "^9.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.2.1",
+        "react-router-dom": "^6.23.1",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
@@ -60,6 +65,7 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@eslint/compat": "^1.0.3",
         "@graphql-codegen/cli": "5.0.2",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/graphql": "^14.5.0",
         "@types/node": "^20.13.0",
@@ -69,6 +75,9 @@
         "install": "^0.13.0",
         "nodemon": "^3.1.2",
         "npm": "^10.8.1",
+        "postcss": "^8.4.38",
+        "postcss-preset-mantine": "^1.15.0",
+        "postcss-simple-vars": "^7.0.1",
         "prettier": "^3.3.0",
         "ts-node": "^10.9.2",
         "typescript": "^4.9.0"
