--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
         "@apollo/client": "^3.10.4",
         "@eslint/eslintrc": "^3.1.0",
         "@eslint/js": "^9.4.0",
+        "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+        "@graphql-codegen/typescript-urql": "^4.0.0",
         "@mantine/core": "^7.10.1",
         "@mantine/hooks": "^7.10.1",
+        "@tabler/icons-react": "^3.5.0",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
@@ -16,6 +19,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/parser": "^5.62.0",
+        "babel-loader": "^9.1.3",
         "cors": "^2.8.5",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-react": "^7.34.2",
@@ -29,7 +33,8 @@
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.23.1",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "zustand": "^4.5.2"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -62,9 +67,16 @@
         ]
     },
     "devDependencies": {
+        "@babel/core": "^7.24.6",
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@eslint/compat": "^1.0.3",
-        "@graphql-codegen/cli": "5.0.2",
+        "@graphql-codegen/cli": "^5.0.2",
+        "@graphql-codegen/client-preset": "^4.2.6",
+        "@graphql-codegen/introspection": "^4.0.3",
+        "@graphql-codegen/typed-document-node": "^5.0.7",
+        "@graphql-codegen/typescript": "^4.0.7",
+        "@graphql-codegen/typescript-operations": "^4.2.1",
+        "@parcel/watcher": "^2.4.1",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/graphql": "^14.5.0",
@@ -80,6 +92,6 @@
         "postcss-simple-vars": "^7.0.1",
         "prettier": "^3.3.0",
         "ts-node": "^10.9.2",
-        "typescript": "^4.9.0"
+        "typescript": "^4.9.5"
     }
 }
