--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
+        "moduleDetection": "force",
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
     },
     "include": ["server", "src"],
 }
